--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ h5{
     color: white;
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 25px;
+    margin-bottom: auto;
 }
 .contact-me .button-two{
     background-color: #f9004d;
